<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Useless Shit -->

    <string name="app_name">Cosmic Hub</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_back">Back</string>
    <string name="title_activity_icon_preference_screen">IconPreferenceScreen</string>
    <string name="wifi">WIFI Settings</string>
    <string name="lockscreen">Lockscreen Settings</string>
    <string name="title_activity_user_interface">UI Settings</string>
    <string name="edt">EDT Tweaks</string>
    <string name="battery">Battery Bar Settings</string>
    <string name="title_activity_utility">Utilities</string>
    <string name="states">CPU States</string>
    <string name="cpu">CPU Settings</string>
    <string name="title_activity_about">About</string>
    <string name="app">Evo Modificazione App</string>
    <string name="app_info">App version - 1.0</string>
    <string name="rom_thread">Official Rom Thread</string>
    <string name="theme_thread">Official Themes Thread</string>
    <string name="forum">forum.xda-developers.com</string>
    <string name="logcat">Take Logcat</string>
    <string name="terminal">Terminal Emulator</string>
    <string name="quickpanel">Quickpanel Settings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="summary_off">Summary off</string>
    <string name="summary_on">Summary on</string>
    <string name="title_activity_notification_panel">Notification Panel</string>
    <string name="ui_general">GENERAL</string>
    <string name="status_bar">STATUS BAR</string>
    <string name="clock">CLOCK</string>
    <string name="panel_bg">PULLDOWN BACKGROUND</string>
    <string name="battery_visible">Battery visible</string>
    <string name="battery_hidden">Battery hidden</string>
    <string name="battery_bar">Battery Bar</string>
    <string name="title_activity_status_bar">StatusBar</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="change_pic">Change profile picture</string>
    <string name="profile_pic">SET PROFILE PICTURE</string>
    <string name="profile_name">CHANGE PROFILE NAME</string>
    <string name="clock_hide">Clock hidden</string>
    <string name="clock_unhide">Clock visible</string>
    <string name="notif_summary">Configure notification panel elements, background color.</string>
    <string name="status_summary">Statusbar color and other elements</string>
    <string name="date">DATE VIEW</string>
    <string name="day_hide">Day hidden</string>
    <string name="day_unhide">Day visible</string>
    <string name="title_activity_quick_settings">QuickSettings</string>
    <string name="toggle">QUICKSETTINGS TOGGLE</string>
    <string name="about_summary">App version,official thread.</string>
    <string name="ui_summary">Configure UI elements.Lets you change preference of UI elements.</string>
    <string name="tools_summary">Essential utilities for Phone Management</string>
    <string name="quicksettings_summary">Pick the statusbar quicksettings toggle color</string>
    <string name="user_summary">Set quicksettings profile picture and name</string>
    <string name="ls_summary">Choose lockscreen settings</string>
    <string name="phab">Normal View</string>
    <string name="tab">Tablet View</string>
    <string name="layout">Status Bar Layout</string>
    <string name="layout_summary">Change statusbar layout</string>
    <string name="rom_name">Evolution-X</string>
    <string name="title_activity_plat_logo">PlatLogoActivity</string>
    <string name="title_activity_view_page">ViewPageActivity</string>
    <string name="title_activity_mods">Mods</string>
    <string name="title_activity_wallpaper">Wallpapers</string>
    <string name="wallpaper">Wallpapers</string>
    <string name="wallpaper_summary">Set wallpapers of your choice from this beautiful collection</string>
    <string name="title_activity_bean_bag">BeanBag</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="warning">You are not on Gingerbread. This can create problems.\n\nNot being on Gingerbread will lead on numerous FCs like Wallpapers, Utilities, Lockscreen Settings, etc.\n\n And it is an useless app if you are not on my Cosmic Theme. I am not responsible for anything that goes beyond this screen. You have had your warning. Do you not agree?</string>

    
    <!-- FAQ Shit -->
    
    <string name="que1">Q. How to change status bar and notification drawer color?</string>
    <string name="ans1">A. Go in the Mods>UI Settings, And choose Status Bar or Notification Panel as you wish and change their colour using the Colour Dialog</string>
    <string name="que2">Q. Some utilities Force Close. Why?</string>
    <string name="ans2">A. Your ROM doesn\'t have these required files. Use Simplicity v5 for best results</string>
    <string name="que3">Q. When I want to change the wallpaper, screen flickers. What to do?</string>
    <string name="ans3">A. Change Font Size to Normal</string>
    <string name="que4">Q. I can\'t hear awesome music on earphones. WHY?</string>
    <string name="ans4">A. Flash Rafael.Baugis Modules</string>
    <string name="que5">Q. It doesn\'t work on CM?!?!?!</string>
    <string name="ans5">A. You went full retard. Never go full retard</string>
    <string name="que6">Q. This is fake. I can\'t install Jelly Bean Apps!!!</string>
    <string name="ans6">A. See the answer of above question</string>
    <string name="quef">Q. Can I kang it?</string>
    <string name="ansf">A. No</string>
    
    
    <!-- Serious Shit -->
    
    
    <string name="cosmic_about">&lt;b>Cosmic&lt;/b> is a Jelly Bean theme or S-ROM made by Areeb Jamal mainly for Simplicity v5. It not only replicates Jelly Bean 4.3, but also adds a quite useful features in the phone and changes the UI in &lt;i>never seen before&lt;/i> way. And with it\'s version 3, it\'s set to give it\'s users a &lt;i>&lt;b>Cosmic Experience&lt;/b>&lt;/i>.</string>
    <string name="changelog">&lt;b>Changelog&lt;/b>&lt;br>&lt;br>&lt;br>&#8226;Completely revamped Settings App&lt;br>&#8226;New Messaging App with awesome theming.&lt;br>&#8226;Music App look changed&lt;br>&#8226;&lt;b>&lt;i>Jelly Bean Easter Egg&lt;/i>&lt;/b>&lt;br>&#8226;All images optimised for smoother experience&lt;br>&#8226;Status Bar Icons resized for even and clean look.&lt;br>&#8226;&lt;i>On/Off Buttons&lt;/i> changed to Jelly Bean Style&lt;br>&#8226;Title bar changed to Simpler previous look&lt;br>&#8226;Several Items added in Settings Menu&lt;br>&#8226;Cosmic Hub in a new avatar&lt;br>&#8226;Revamped the ROM Center &lt;i>aka&lt;/i> Lidroid Parts.&lt;br>&#8226;Improved Battery % Size&lt;br>&#8226;&lt;b>SEVERAL&lt;/b> framework update and fixes&lt;br>&#8226;Extended Power Menu with 5 options added.&lt;br>&#8226;&lt;i>Many more features looking for you to find them&lt;/i></string>
	<string name="hub_about">&lt;b>Cosmic Hub&lt;/b> is a ROM Control app built from &lt;i>source&lt;/i>. It is built from ground using the codes from the open source &lt;i>Evo Modificaziones&lt;/i> app. Several other thing like Wallpaper Support, Revamped About Section, Dynamic Action Bar, etc was added afterwards by &lt;i>iamareebjamal&lt;/i>. The app provides a hub to: &lt;br>&lt;br>Mods&lt;br>Wallpapers&lt;br>Utilities&lt;br>Shortcuts&lt;br>FAQ&lt;br>&lt;i>etc&lt;/i>&lt;br>&lt;br>The app is licensed under GPL, whose license can be found &lt;a href="www.google.com">here&lt;/a></string>
    <string name="licenses">&lt;b>This app uses 3rd party libraries whose licenses are as follows:&lt;/b>&lt;br>&lt;br>&#8226;&lt;b>actionbarsherlock&lt;/b>&lt;br>&lt;i>Copyright &#169; 2012 Jake Wharton&lt;/i>&lt;br>&lt;br>Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and limitations under the License.
    you may not use this file except in compliance with the License. &lt;br>&lt;br>&lt;br>&#8226;&lt;b>AmbilWarna ColorPickerPrefeence&lt;/b>&lt;br>&lt;i>Copyright &#169; 2011 Sergey Margaritov and Daniel Nilsson&lt;/i>&lt;br>&lt;br>Licensed under the Apache License, Version 2.0 (the "License");
    You may obtain a copy of the License at 

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.&lt;br>&lt;br>&lt;br>&#8226;&lt;b>NineOldDroid&lt;/b>&lt;br>&lt;i>Copyright &#169; 2012 Jake Wharton&lt;/i>&lt;br>&lt;br>Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.</string>
    <string name="credits">&#8226;b16h22\n&#8226;stackoverflow\n&#8226;AChep\n&#8226;4.3 Emulator Firmware\n&#8226;abhi922\n&#8226;amogh420\n&#8226;destructo570\n&#8226;m4rinko2\n&#8226;Partimus Prime\n&#8226;PetrukGrinder\n&#8226;dcsms\n&#8226;SpaceCaker\n&#8226;lokeshsaini\n&#8226;Eclipse IDE\n&#8226;Photoshop\n&#8226;Google\n&#8226;ICS 10 CM7 Theme\n&#8226;Jake Wharthon\n&#8226;Zdune25\n&#8226;evanlocked\n&#8226;D.O.C\n&#8226;AndroidON\n&#8226;loSconosciuto\n&#8226;Alioda</string>
    <string name="areebinfo">&lt;b>Areeb Jamal&lt;/b> (&lt;font color=#00ddff>&lt;b>&lt;i>iamareebjamal&lt;/i>&lt;/b>&lt;/font>) is a 17 year old student from India. &lt;br>&lt;br>Areeb started exploring the depths of Android world through XDA since &lt;i>August 2012&lt;/i>. XDA gave him almost all his knowledge and he too, has not fallen short to give XDA back some contribution.&lt;br>&lt;br>Currently, &lt;font color=#669900>&lt;b>&lt;i>Recognised Contributor&lt;/i>&lt;/b>&lt;/font> and &lt;font color=#00ddfff>&lt;b>&lt;i>Recognised Themer&lt;/i>&lt;/b>&lt;/font> on XDA, Areeb seeks forward to give XDA more than what it has given to him. From theming to ROM Cooking and a little modding, Areeb has provided some considerable works for end users on XDA. And with some simple and useful guides, he has also made people contribute more.&lt;br>&lt;br>Nevertheless, he finds it difficult sometimes to snatch some time for XDA between his studies and leisure life, he always hopes he could do better than ever he has done.</string>
    
    
</resources>
