<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FAQ" >
    
    
    
    <ScrollView
        android:id="@+id/scroll"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#2cffffff"
            	android:layout_marginBottom="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="#ff33b5e5"
                    android:textSize="18sp"
                    android:text="F.A.Q" />
            
        	</LinearLayout>
        	
            <LinearLayout
                android:id="@+id/LLQ1"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/que1" />
                
            
                
                <LinearLayout
                    android:id="@+id/LLA1"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:padding="10dp"
                    	android:textColor="#ffffff"
                    	android:text="@string/ans1" />
            		
                    
            		
               </LinearLayout>
               
            	
            
        	
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/LLQ2"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/que2" />
                
            
                
                <LinearLayout
                    android:id="@+id/LLA2"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:padding="10dp"
                    	android:textColor="#ffffff"
                    	android:text="@string/ans2" />
            		
                    
            		
               </LinearLayout>
               
            	
            
        	
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/LLQ3"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/que3" />
                
            
                
                <LinearLayout
                    android:id="@+id/LLA3"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:padding="10dp"
                    	android:textColor="#ffffff"
                    	android:text="@string/ans3" />
            		
                    
            		
               </LinearLayout>
               
            	
            
        	
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/LLQ4"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/que4" />
                
            
                
                <LinearLayout
                    android:id="@+id/LLA4"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:padding="10dp"
                    	android:textColor="#ffffff"
                    	android:text="@string/ans4" />
            		
                    
            		
               </LinearLayout>
               
            	
            
        	
            </LinearLayout>
            
            
            <LinearLayout
                android:id="@+id/LLQ5"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/que5" />
                
            
                
                <LinearLayout
                    android:id="@+id/LLA5"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:padding="10dp"
                    	android:textColor="#ffffff"
                    	android:text="@string/ans5" />
            		
                    
            		
               </LinearLayout>
               
            	
            
        	
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/LLQ6"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/que6" />
                
                
                
            
                
                <LinearLayout
                    android:id="@+id/LLA6"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:padding="10dp"
                    	android:textColor="#ffffff"
                    	android:text="@string/ans6" />
                    
                    <ImageView
                    	android:id="@+id/imageView1"
                    	android:layout_gravity="center"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:src="@drawable/yds" />
                    
            		
               </LinearLayout>
               
                
                
        	
            </LinearLayout>
            
            
            <LinearLayout
                android:id="@+id/LLQf"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#ffff5f5f"
            	android:layout_marginTop="10dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:text="@string/quef" />
                
            
                
                <LinearLayout
                    android:id="@+id/LLAf"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:visibility="gone"
            		android:background="#ff50c0e9"
            		android:orientation="vertical" >
            		
                    <ImageView
                    	android:id="@+id/imageView2"
                    	android:layout_gravity="center"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:src="@drawable/no" />
            		
                    
            		
               </LinearLayout>
               
            	
            
        	
            </LinearLayout>
            
            <LinearLayout
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="#2cffffff"
            	android:layout_marginTop="20dp"
            	android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="#ff33b5e5"
                    android:textSize="18sp"
                    android:text="iamareebjamal" />
            
        	</LinearLayout>
            
            
            
        </LinearLayout>
        
        
    </ScrollView>
    
    

</LinearLayout>
