<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical" >
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="160.0dip" >
    <ImageView android:layout_width="fill_parent"
        android:layout_height="160.0dip"
        android:id="@+id/image"
        android:scaleType="centerCrop" />
    <TextView android:id="@+id/Owner"
        android:textColor="#ffffffff"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#a6000000"
        android:textSize="20.0sp"
        android:paddingLeft="20.0sp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true" />
    <View android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ff33b5e5"
        android:layout_alignParentBottom="true"         />
</RelativeLayout>
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="30.0dip"
        android:orientation="vertical"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="5dp">
        <TextView android:text="@string/profile_pic"
            android:textColor="#ff33b5e5"
            android:textSize="15.0sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="28.0dip"
            android:gravity="center_vertical"/>
        <View android:background="#ff33b5e5"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
    </LinearLayout>
    <RelativeLayout android:id="@+id/layout1"
        android:layout_below="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:orientation="horizontal"
        android:paddingTop="5.0dip">
        <TextView android:id="@+id/change_picture_text" 
            android:text="@string/change_pic"
            android:textSize="20.0sp"
            android:layout_width="wrap_content"
            android:paddingLeft="20.0sp"
            android:layout_alignParentLeft="true"
            android:layout_height="fill_parent"
            android:gravity="center_vertical" />
        <View android:background="#ffd5d5d5" 
            android:layout_width="0.3dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_toLeftOf="@+id/photo_picker"/>
        <ImageView android:src="@drawable/pick_profile_picture"
            android:id="@+id/photo_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginRight="10.0dip"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout android:id="@+id/linear_layout1"
        android:layout_below="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="30.0dip"
        android:orientation="vertical"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="5dp">
        <TextView android:text="@string/profile_name"
            android:textColor="#ff33b5e5"
            android:textSize="15.0sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="28.0dip"
            android:gravity="center_vertical"/>
        <View android:background="#ff33b5e5"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
    </LinearLayout>    
    <LinearLayout android:id="@+id/layout2"
        android:layout_below="@+id/linear_layout1"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:orientation="horizontal"
        android:paddingTop="5.0dip">
        <EditText android:id="@+id/name_field"
            android:layout_width="0.0dp"
            android:layout_marginLeft="15.0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="Enter name here"
            android:layout_weight="1.0"/>
        <ImageView android:src="@drawable/done"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginRight="15.0dip"
            android:layout_alignParentRight="true"/>        
    </LinearLayout>
    
</RelativeLayout>
</LinearLayout>